# battleship

./: .gitignore  Makefile.am  configure.ac
client/: Makefile  Makefile.am  cl_gui.c  cl_gui.h  cl_logic.c  cl_logic.h  cl_main.c  cl_main.h  cl_net.c  cl_net.h  client  client.h
include/: net_types.h
server/: Makefile  Makefile.am  srv_logic.c  srv_logic.h  srv_main.c  srv_main.h  srv_net.c  srv_net.h
